--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class=" container-fluid  navbar-collapse" >
    
 	
-    <a class="nav-items  K1" href="#ZN" style="color:white"> <img src="house.png" alt="home" style="height:45px;width:45px" class="n4"/></a>
+    <a class="nav-items  K1" href="#ZN" style="color:white"> <img src="House.png" alt="home" style="height:45px;width:45px" class="n4"/></a>
 	
     <!-- Home button above -->
   
