--- a/index.html
+++ b/index.html
@@ -122,16 +122,16 @@
 			</tr>
 			 <tr>
 				<td> <a href="e.index.html">
-				<img src="cam2.png" alt="cam" style="height: 75px; width: 75px"/> 
+				<img src="cam2.png" alt="cam" style="height: 20vw; width: 20vw"/> 
 				</a>
 				</td>
 				<td> <a href="index2+.html">
-				<img src="sitft2.png" alt="db" style="height: 75px; width: 75px"/>
+				<img src="sitft2.png" alt="db" style="height: 20vw; width: 20vw"/>
 				
 				</a>
 				</td>
 				<td> <a href="index4+.html">
-				<img src="city.png" alt="city" style="height: 75px; width: 75px"/>
+				<img src="city.png" alt="city" style="height: 20vw; width: 20vw"/>
 				
 				</a>
 				</td>
