--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="style3.css" >
  <meta name="viewport" content="width=device-width, initial-scale=1">
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
- 
+ <link rel="stylesheet" media="screen and (max-width: 700px)" href="small.css">
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
  
 	<header  class="fixed-top Hi" style="background-color: #222;font-size:45px;color:transparent"> &nbsp; </header>
