--- a/Der-Hub.html
+++ b/Der-Hub.html
@@ -104,7 +104,7 @@
 		
 		
 		
-		<td> <a href="index.html"> <img src="dumbbell.png" alt="city" style="height:125px;width:125px" /> </a> </td>
+		<td> <a href="index.html"> <img src="dumbbell.Png" alt="city" style="height:125px;width:125px" /> </a> </td>
 		 
 		 <td> <a href="e.index.html"> <img src="fam.png" alt="fam" style="height:125px;width:125px" /> </a> </td>
 		 
