--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  <link rel="stylesheet" media="screen and (max-width: 700px)" href="small.css">
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
  
-	<header  class=" Hi" style="background-color: #222;font-size:45px;color:transparent"> &nbsp; </header>
+	<header  class=" Hi fixed-top" style="background-color: #222;font-size:45px;color:transparent"> &nbsp; </header>
 	<nav class="navbar navbar-expand bg-body-tertiary-#222 fixed-top topnav" id="myTopnav">
 
   
