--- a/index2+.html
+++ b/index2+.html
@@ -5,6 +5,7 @@
     <head>
 	
 	     <title> Das Herzstück </title>
+	      <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 <style>
 body { 
   margin: 0;
