--- a/kompetenz.html
+++ b/kompetenz.html
@@ -5,6 +5,7 @@
     <head>
 	
 	     <title>Das Herzstueck</title>
+	      <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 		 
 	<style> 
 
