--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
 <title> MAIN PAGE </title>
-   <link rel="icon" type="image/x-icon" href="/images/Favicon.ico?v=2">
+   <link rel="icon" type="image/x-icon" href="/images/Favoriticon.ico?v=2">
 
 <link rel="stylesheet" href="style3.css" >
  <meta name="viewport" content="width=device-width, initial-scale=1">
