--- a/index4+.html
+++ b/index4+.html
@@ -180,7 +180,7 @@ Hier werden auch viele Festivals veranstaltet sowie ein Weihnachtsmarkt zum Beis
 	
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <h4 style="text-align:center;color:white"> Irgendwelche Fragen? Kontaktiere mich! </h4>	
-<p id="I9"style="text-align:center;color:white">mail: kleinermason@gmail.com  , chrism.h1513@gmail.com , tel.:015165492643 </p>
+<p id="I9"style="text-align:center;color:white">mail: ######@gmail.com  , ######@gmail.com , tel.:123123123123 </p>
 	</div>
 
 	</body>
