--- a/kompetenz.html
+++ b/kompetenz.html
@@ -179,7 +179,7 @@
 	
 	<div class="oi4" >
 <h4 > Irgendwelche Fragen? Kontaktiere mich! </h4>	
-<p id="I9"style="text-align:center;color:black">mail: kleinermason@gmail.com  , chrism.h1513@gmail.com , tel.:015165492643 </p>
+<p id="I9"style="text-align:center;color:black">mail: #######@gmail.com  , ######@gmail.com , tel.:123123123123 </p>
 	</div>
 </div>
 	</body>
