--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
 </div>
    <div class="plswrk">
 	  
-         <a class="nav-link" href="Der-Hub.html"> Hub &nbsp; </a>
+         <a class="nav-link" href="
+		 "> Hub &nbsp; </a>
        
 		 </div>
 		
