--- a/index.html
+++ b/index.html
@@ -139,20 +139,19 @@
 					</tr>
 						<tr>
 							<td>
-							Hier habe ich  über mich selbst geschrieben. <br>
-							Benutzt wurde CSS und HTML. <br>
-							Ich habe ca. 3 Tage dran gearbeitet,<br>
-							also verwartet nicht ganz so viel. <br>
-							Im hintergedanken hatte ich mit der Website mich besser zu äußern.
-							</td>
-							<td>Hier habe ich über meine Stadt geschrieben. <br>
-							Benutzt wurde CSS, HTMl und Bootstrap5.<br>
-							Ich hatte ca.1 Tag dran gearbeitet <br> bevor ich schnell eine neue Version erschaffen habe.
-							</td>
-							<td>Hier ist die Vielversprechende Version von der zweiten Webseite.<br>
-							Hier wurde tiefflächiger mit HTML, CSS und bootstrap5 gearbeitet. <br>
-							Habe ca. 3 Tage dran gearbeitet.
-							
+							Hier habe ich über mich selbst geschrieben. <br>
+Benutzt wurden CSS und HTML. <br>
+Ich habe ca. 3 Tage daran gearbeitet.
+Also, erwartet nicht ganz so viel. <br>
+Im Hintergedanken hatte ich, mich mit der Website besser zu äußern.
+                            </td>
+<td>Hier habe ich über meine Stadt geschrieben. <br>
+Benutzt wurden CSS, HTML und Bootstrap 5. <br>
+Ich hatte ca. 1 Tag daran gearbeitet, bevor ich schnell eine neue Version erschaffen habe.
+                            </td>
+<td>Hier ist die vielversprechende Version von der zweiten Webseite. <br>
+Hier wurde tiefflächiger mit HTML, CSS und Bootstrap 5 gearbeitet. <br>
+Habe ca. 3 Tage daran gearbeitet.
 							
 							</td>
 						</tr>
