--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@ Habe ca. 3 Tage daran gearbeitet.
    
    <h1 class="text-center R2" id="UZ2"> Wozu dient diese Webseite? </h1>
    
-   <h1 class="text-center R3"> Sie dient zur Schaugabe der verschiedenen Funktionen von CSS, HTML und Bootstrap5. <br>
-   Ich will auch verschiedene Styles von Webseiten ausprobieren. IBYKUS AG, Mircosoft, Apple und Google dienten mir als vorlage.<br> </h1>
+   <h1 class="text-center R3">Sie dient zur Schaugabe der verschiedenen Funktionen von CSS, HTML und Bootstrap 5. <br>
+Ich will auch verschiedene Styles von Webseiten ausprobieren. IBYKUS AG, Microsoft, Apple und Google dienten mir als Vorlage. </h1>
    
-    <h1 class="text-center R4"> Ich möchte auch bewirken dass andere Interesse an der Programmierung entwickeln.<br>
-	Ich Selbst bewundere die Programmeriung und mein Praktikum an IBYKUS Ag hat diese Bewunderung gestärkt </h1>
+    <h1 class="text-center R4"> Ich möchte auch bewirken, dass andere Interesse an der Programmierung entwickeln. <br>
+Ich selbst bewundere die Programmierung und mein Praktikum bei IBYKUS AG hat diese Bewunderung gestärkt. </h1>
    
    </div>
    
@@ -178,12 +178,12 @@ Habe ca. 3 Tage daran gearbeitet.
   
   <div class="R3">
   
-    <p> Sie ist wie gesagt mit HTMl,CSS und Bootstrap gebaut, jedoch wird Javascript auch irgendwann intigriert. mit der Navbar soll man besser durch die Webseite kommen.
-	<br> dazu kommt mit CSS: ein parllax Effekt, was sie professioneller aussehen lässt. Angehörig des parallax Effektes kommt Text auf Bild.
+   Sie ist wie gesagt mit HTML, CSS und Bootstrap gebaut, jedoch wird JavaScript auch irgendwann integriert. Mit der Navbar soll man besser durch die Webseite kommen. <br>
+Dazu kommt mit CSS ein Parallax-Effekt, was sie professioneller aussehen lässt. Angehörig des Parallax-Effektes kommt Text auf Bild.
         	</p>
 	</div>
 <div class="R03">	
-			<p> Kommentare kommen noch nicht zustande, da ich die Kenntnisse dazu nicht habe und nicht den Code direkt kopieren will. </p>
+			<p>Kommentare kommen noch nicht zustande, da ich die Kenntnisse dazu nicht habe und nicht den Code direkt kopieren will. </p>
 	
 	
    </div>
