--- a/index.html
+++ b/index.html
@@ -122,16 +122,16 @@
 	      <th>Die Neuste</th>
 			</tr>
 			 <tr>
-				<td> <a href="e.index.html">
+				<td> <a href="e.indx.html">
 				<img src="cam2.png" alt="cam" style="height: 80px; width: 80px"/> 
 				</a>
 				</td>
-				<td> <a href="index2+.html">
+				<td> <a href="inex2+.html">
 				<img src="sitft2.png" alt="db" style="height: 80px; width: 80px"/>
 				
 				</a>
 				</td>
-				<td> <a href="index4+.html">
+				<td> <a href="indx4+.html">
 				<img src="city.png" alt="city" style="height: 80px; width: 80px"/>
 				
 				</a>
