--- a/e.index.html
+++ b/e.index.html
@@ -81,17 +81,17 @@ background-color: whitesmoke
 <img src="controller.png"; alt="controller"; style="width:150px;height:150px;" >
 
 
-<p style=text-align:center;class="para">Seit kleines Kind habe ich Videospiele gespielt. Sie waren ein großteil meiner Kinderheit, dazu meine einzigste beschäftigung im Alltag. Manchmal hätte ich mir gewünscht, dass meine Mutter mich besser erzieht. <br>
-Jedoch blicke ich gern zu den alten Zeiten zurück. Ich habe meist Minecraft oder Roblox gespielt als kleines Kind. Bis heute spiele Videospiele jedoch, habe ich auch andere Hobbies.</p>
+<p style=text-align:center;class="para">Seit ich ein kleines Kind bin, habe ich Videospiele gespielt. Sie waren ein Großteil meiner Kindheit und dazu meine einzige Beschäftigung im Alltag. Manchmal hätte ich mir gewünscht, dass meine Mutter mich besser erzieht. <br>
+Jedoch blicke ich gern zu den alten Zeiten zurück. Ich habe meist Minecraft oder Roblox gespielt, als ich ein kleines Kind war. Bis heute spiele ich Videospiele, jedoch habe ich auch andere Hobbys. </p>
 
 <h3 style=text-align:center;class="para"> <a href="https://de.wikipedia.org/wiki/Elden_Ring"/ target=_blank> Eldenring </a> </h3>
 
-<p style=text-align:center;class="para">Dieses Spiel habe ich nicht mal so lange. Ich besorgte mir das Spiel als ich viel von mein Freund darüber gehört habe. Einer meiner besseren Entscheidungen im Leben. <br>
-Durch die Schwierigkeitsstufe konnte ich besser im echtem leben ruhig handeln.</p>
+<p style=text-align:center;class="para">Dieses Spiel habe ich nicht mal so lange. Ich besorgte mir das Spiel, als ich viel von meinem Freund darüber gehört hatte. Eine meiner besseren Entscheidungen im Leben. <br>
+Durch die Schwierigkeitsstufe konnte ich im echten Leben besser ruhig handeln.</p>
 
 <h3 style=text-align:center;class="para"> <a href="https://de.wikipedia.org/wiki/Minecraft"/ target=_blank> Minecraft</a></h3>
 
-<p style=text-align:center;class="para">Wie gesagt ich kenne diese Spiel seit meiner Kindheit. Es prägte meine kreativität, obwohl ich kaum weiter kam im Spiel. Ich hatte auch oft streit mit meinem Mitmenschen wenn sie mal mitspielten.</p>
+<p style=text-align:center;class="para">Wie gesagt, ich kenne dieses Spiel seit meiner Kindheit. Es prägte meine Kreativität, obwohl ich kaum weiterkam im Spiel. Ich hatte auch oft Streit mit meinen Mitmenschen, wenn sie mal mitspielten.</p>
  
  <br>
 <div style="background-color:silver";>
@@ -99,13 +99,13 @@ Durch die Schwierigkeitsstufe konnte ich besser im echtem leben ruhig handeln.</
 
 <img src="sitft2.png"; alt="stift"; style="width:150px;height:150px;" >
 
-<p style=text-align:center;class="para">Ich hatte schon irgendwie eine begabung dafür. Ich würde schon sagen dass ich relativ gut bin im Zeichnen, jedoch sollte man trotzdem nicht übermütig werden. <br>
- Ich würde auch gern ein Beruf dazu haben, siehe aber keine zukunft dafür.</p>
+<p style=text-align:center;class="para">Ich hatte schon irgendwie eine Begabung dafür. Ich würde schon sagen, dass ich relativ gut bin im Zeichnen, jedoch sollte man trotzdem nicht übermütig werden. <br>
+Ich würde auch gern einen Beruf dazu haben, sehe aber keine Zukunft dafür.</p>
 <br>
 <h3 style=text-align:center;class="para"> Anatomie </h3>
 <br>
-<p style=text-align:center;>Im diesen Bereich zeichne ich am meisten, irgendwie beeindrückt mich der menschliche Körper. dazu zeichne ich sie ihn Schwarz-Weiß. 
-<br> Ich habe viele zeichnungs blöcke zu hause.</p>
+<p style=text-align:center;>In diesem Bereich zeichne ich am meisten, irgendwie beeindruckt mich der menschliche Körper. Dazu zeichne ich sie in Schwarz-Weiß. 
+Ich habe viele Zeichnungsblöcke zu Hause.</p>
 <br>
 </div>
 
@@ -113,16 +113,17 @@ Durch die Schwierigkeitsstufe konnte ich besser im echtem leben ruhig handeln.</
 
 <img src="Cam2.png"; alt="cam"; style="width:150px;height:150px;" >
 
-<p style=text-align:center;>Ich liebe die Fotografie. Das Gefühl ein perfektes bild zu machen ist echt gut, dazu auch befriedigend.
-<br> Ich habe erst seit ein halben Jahr angefangen mit einer professionrllen Kamera.</p>
+<p style=text-align:center;>Ich liebe die Fotografie. Das Gefühl, ein perfektes Bild zu machen, ist echt gut, dazu auch befriedigend.
+Ich habe erst seit einem halben Jahr angefangen mit einer professionellen Kamera.</p>
 
 <h3 style=text-align:center;class="para"> Landschaften </h3>
 
-<p style=text-align:center;class="para">Von Landschaften hab ich genug bilder. Landschaften sind immer anders also wird es nie langweilig Bilder davon zu machen. <br>es könnten auch einfach die kleinsten dinge sein und ich würde sie Fotografieren.</p>
+<p style=text-align:center;class="para">Ich liebe die Fotografie. Das Gefühl, ein perfektes Bild zu machen, ist echt gut, dazu auch befriedigend.
+Ich habe erst seit einem halben Jahr angefangen mit einer professionellen Kamera.</p>
 
 <h3 style=text-align:center;class="para"> Verwandtschaft </h3>
 
-<p style=text-align:center;class="para">Bei gewissen veranstaltungen oder events, benutze ich gern meine Kamera um bestimmte Mommente aufzunehmen. <br> Ich Fotografiere auch in der Wohnung oder drehe Videos mit der Videofunktion.</p>
+<p style=text-align:center;class="para">Bei gewissen Veranstaltungen oder Events benutze ich gern meine Kamera, um bestimmte Momente aufzunehmen. Ich fotografiere auch in der Wohnung oder drehe Videos mit der Videofunktion.</p>
 <br>
 <div style="background-color:silver";>
 
@@ -141,7 +142,7 @@ Durch die Schwierigkeitsstufe konnte ich besser im echtem leben ruhig handeln.</
 <h3 style=text-align:center;class="para"> Tools und diese Website </h3>
 
 <p style=text-align:center;>Ich habe eine Software benutzt wo coden leichter war als bei Notepad. 
-Dazu gab es an ob der code funktsoniert. Diese Website war die erste wo ich allein mit einen tutorial und notepad arbeite. </p>
+Dazu gab es an ob der code funktsoniert. Diese Website war die erste wo ich allein mit einen tutorial und notepad arbeite. Vorher habe ich mehr professionellere Editoren benutzt </p>
 <br>
 </div>
 
