--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 	      <th>Die Neuste</th>
 			</tr>
 			 <tr>
-				<td> <a href="e.indx.html">
+				<td> <a href="e.index.html">
 				<img src="cam2.png" alt="cam" style="height: 80px; width: 80px"/> 
 				</a>
 				</td>
